@@ -46,11 +46,11 @@ syn match muttatorAutoEventList "\(\a\+,\)*\a\+" contained contains=muttatorAuto
 syn region muttatorSet matchgroup=muttatorCommand start="\%(^\s*:\=\)\@<=\<\%(setl\%[ocal]\|setg\%[lobal]\|set\=\)\=\>"
     \ end="$" keepend oneline contains=muttatorOption,muttatorString
 
-syn keyword muttatorOption archivefolder cdpath cd complete cpt editor eventignore ei extendedhinttags eht fileencoding fenc
-    \ followhints fh guioptions go helpfile hf hintinputs hin hintmatching hm hinttags ht hinttimeout hto history hi laststatus ls
+syn keyword muttatorOption archivefolder autocomplete ac cdpath cd complete cpt editor eventignore ei extendedhinttags eht fileencoding fenc
+    \ followhints fh guioptions go helpfile hf hintinputs hin hintmatching hm hinttags ht hinttimeout hto history hi
     \ layout maxitems messages msgs nextpattern pageinfo pa previouspattern runtimepath rtp scroll scr shell sh shellcmdflag shcf
-    \ showstatuslinks ssli showtabline stal smtpserver smtp suggestengines titlestring urlseparator verbose vbs wildcase wic
-    \ wildignore wig wildmode wim wildoptions wop wordseparators wsp
+    \ showstatuslinks ssli showtabline stal status smtpserver smtp suggestengines titlestring urlseparator verbose vbs wildcase wic
+    \ wildignore wig wildmode wim wop wordseparators wsp
     \ contained nextgroup=muttatorSetMod
 
 " toggle options
