@@ -8,7 +8,7 @@
 " I don't like beeps
 set visualbell
 " useful for command-line completion
-set wildoptions=auto
+set autocomplete
 set wildmode=list:longest,full
 
 
