@@ -9,6 +9,10 @@
       to decide which elements are shown in the new style status bar
     * IMPORTANT: Support for configurable hint characters; This basically brings back the old
       hint behavior for those who prefer it. See the 'hintchars' option. Patch by caisui
+    * IMPORTANT: 'wildoptions' option was removed. Completions are sorted automatically now,
+      and 'autocomplete' is the new option for the removed 'wildoptions=auto'
+    * IMPORTANT: We automatically list completions as you type now. If you have a slow computer,
+      you might want to :set noautocomplete
     * Lots of restyled content and changed colors
     * gu works now better for urls with anchors and GET arguments (like url.com/file?query=foo#anchor)
     * :bmarks and :history commands support multiple space separated filter entries and
